<resources>
    <string name="app_name">AndroidReview</string>
    <string name="maina_state_save_btn">保存</string>
    <string name="maina_state_select_btn">查询</string>
    <string name="maina_state_add_btn">add</string>
    <string name="maina_state_del_btn">del</string>
    <string name="maina_state_modify_btn">modify</string>
    <string name="title_activity_cont_pro_test">ContProTest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
