<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="yc.com.androidreview.MainActivity">
    <EditText
        android:id="@+id/maina_state_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/maina_state_et" />
    <Button
        android:id="@+id/maina_state_save_btn"
        android:text="@string/maina_state_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/maina_state_add_btn"
        android:text="@string/maina_state_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/maina_state_del_btn"
        android:text="@string/maina_state_del_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/maina_state_modify_btn"
        android:text="@string/maina_state_modify_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/maina_state_select_btn"
        android:text="@string/maina_state_select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
